styles.css
/* ... */
.mod_minilesson-shake {
  animation-name: shake-rotate;
  animation-duration: 100ms;
  animation-timing-function: ease-in-out;
  animation-iteration-count: 2;
}

.mod_minilesson_grading_passageactions {
  margin-top: 10px;
  display: flex;
}

.minilesson_speechcards_container {
  border: 1px solid darkgray;
  margin-bottom: 5px;
  padding: 10px;
}

.minilesson_speechcards_pushrecorder {
  text-align: center;
  background-image: url([[pix:mod_minilesson|spinner]]);
  background-repeat: no-repeat;
  background-position: center;
}

.glide__wrapper {
  overflow: hidden;
  pointer-events: none;
}

.glide__slide {
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.glide {
  height: 150px !important;
}

.minilesson-poodllspeechcards_box {
  text-align: center;
  width: 60%;
  /*225px;*/
  font-size: 25px;
  margin: auto;
  border: 1px solid darkgray;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100px;
  background-color: #f5f5f5;
  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.75);
}

.minilesson-speechcards_toprow {
  margin: 15px auto;
  display: flex;
  justify-content: center;
}

.minilesson-speechcards_whatheard {
  width: 400px;
  border: dotted 1px;
  border-color: green;
  text-align: center;
  margin: 1px;
}

.minilesson-speechcards_gotit {
  color: white;
  background-color: green;
}

/* PROGRESS DOTS */

.minilesson_progress_dots {
  font-size: 40px;
  text-align: center;
  letter-spacing: 10px;
  border: 1px solid darkgray;
  margin-bottom: 5px;
}

.minilesson_star_rating {
  letter-spacing: 20px;
  text-align: center;
  font-size: 30px;
}

.minilesson_nextbutton {
  float: right;
}

.minilesson_questionheader {
  padding: 10px;
  text-align: center;
  margin-bottom: 5px;
  background-color: #f5f5f5;
  border-radius: 5px;
}

.mcplaytrigger,
.dictationtrigger {
  cursor: pointer;
  margin: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 40px;
  height: 40px;
}

.mcplayrow {
  margin: 5px 5px 10px 5px;
  padding: 0;
  padding-top: 5px;
  padding-bottom: 5px;
}

.dictationrow {
  margin: 5px;
  padding: 0;
  border: 2px solid darkgray;
  padding-top: 5px;
  padding-bottom: 5px;
}

.dictate-feedback {
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 30px;
  height: 30px;
  font-size: 30px !important;
}

/* DICTATION CHAT */

.minilesson_dictate_player_box {
  border: 1px solid darkgray;
  position: relative;
  /* overflow: hidden;*/
  /*max-width: 400px;*/
  margin: auto;
}

.minilesson_dictate_player_box .dictate_prompt {
  position: relative;
  margin-top: 10px;
}

.minilesson_dictate_player_box .dictate_reply {
  margin-top: 10px;
  position: relative;
}

.dictate_error {}

.minilesson_dictate_player_box .dictate_game {
  min-height: 400px;
  padding: 10px;
  border-top: 1px solid darkgray;
  border-bottom: 1px solid darkgray;
  background-color: rgba(98, 135, 182, 1);
}

.minilesson_dictate_player_box .dictate_speech {
  position: relative;
  font-family: arial;
  font-size: 16px;
  background: #a53d38;
  color: black;
  border-radius: 10px;
  padding: 20px;
}

.minilesson_dictate_player_box  .dictate_right {
  background-color: white;
}

.minilesson_dictate_player_box .dictate_teacher_left {
  background-color: rgba(122, 221, 76, 1);
}

.minilesson_dictate_player_box .dictate_teacher_left:after {
  content: '';
  border: 20px solid transparent;
  border-right-color: rgba(122, 221, 76, 1);
  border-left: 0;
  position: absolute;
  left: -20px;
  top: 50%;
  margin-top: -20px;
}

.minilesson_dictate_player_box .dictate_right:after {
  content: '';
  border: 20px solid transparent;
  border-left-color: white;
  border-right: 0;
  position: absolute;
  right: -20px;
  top: 50%;
  margin-top: -20px;
}

.minilesson_dictate_player_box .dictate_speech-icon-left {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  font-size: 50px !important;
  height: 50px;
}

.minilesson_dictate_player_box .dictate_speech-icon-right {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  font-size: 50px !important;
  height: 50px;
}

.minilesson_dictate_player_box .dictate_mainmenu {
  min-height: 400px;
  background-color: #f5f5f5;
  font-size: 20px;
  padding: 10px;
  border-top: 1px solid darkgray;
  border-bottom: 1px solid darkgray;
}

.minilesson_dictate_player_box .dictate_title {
  border: 2px solid darkgray;
  height: 53px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  font-weight: bold;
}

.minilesson_dictate_player_box .dictate_controls {
  /*
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  */
  height: 35px;
  background-color: white;
}

.minilesson_dictate_player_box .dictate_results {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 75px;
  background-color: rgba(98, 135, 182, 1);
  font-weight: bold;
  color: white;
  text-align: center;
  z-index: 999;
}

.minilesson_dictate_player_box  .dictate_correct {
  background-color: lightgreen;
}

.minilesson_dictate_player_box .dictate_incorrect {
  background-color: lightpink;
}

.minilesson_dictate_player_box .dictate_targetWord {
  padding: 3px;
  border-radius: 5px;
  margin: 5px;
}

.minilesson_dictate_player_box  .dictate_ctrl-btn {
  width: 33.33%;
  float: left;
}

/* LISTEN AND REPEAT */

.minilesson_landr_player_box {
  border: 1px solid darkgray;
  position: relative;
  /* overflow: hidden; */
  /*max-width: 400px;*/
  margin: auto;
}

.minilesson_landr_player_box .landr_prompt {
  position: relative;
  margin-top: 10px;
}

.minilesson_landr_player_box .landr_reply {
  margin-top: 10px;
  position: relative;
}

.minilesson_landr_player_box .landr_error {}
/* ... */

